2002-04-12  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Fixed bug for commandline switches
			on boolean values (segfault)
			Fixed possible wrong treatment of
			empty lines in conf

2002-04-02  Jens Gecius  <jens@gecius.de>

	* 		Final touch up, release 0.9.0
			with archive functionallity.

2002-03-29  Jens Gecius  <jens@gecius.de>

	* v_config.c:	rewrote/enhanced archive handling
			archivemax/archiveeach to manage
			archived pictures added.

2002-03-27  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	(after release) Fixed bug in ttf
			init. Changed internals slightly.

	* General: 	Update manuals, uploaded man's to
			cvs, increased version no. to 0.8.9,
			release.

2002-03-26  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c:	Added Archive option to create an
			archive of images.
			Warning: no upper limit for archive
			implemented, yet. This option might
			fill your harddrive!!
			Currently works only if archive is
			on the same filesystem as the temp-
			output (same restriction for output
			and tmpout - they have to be on the
			same filesystem)
	
	* v_config.c: 	Fixed severe bugs in ftp-code:
			1. remoteDir was not read from conf
			2. if remoteDir not set screwy things
			might have happened...

2002-02-24  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Fixed missing explanation of parameter
			-c on the commandline for the -h
			commanline parameter.

			Enhanced manual.

2002-02-18  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	Finished rewrite of conf-parser. 
			(Almost) identical routines are now 
			used for command-line and conf-file.
			Further information is given in case
			of wrong options.
			Cleanup of code (partially), blow-up
			on some other areas (especially the
			conf-var has to be cleaned up now...)
			Well, ongoing progress, short of
			release 0.8.8 (testing).
			OpenOnce defaults ot On now (to avoid
			memory fragmentation and usb-messages
			in syslog). Use Off only if you need
			to access the device inbetween vgrabbj